@@ -15,7 +15,9 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.0"
 }
-
+compileJava {
+    options.compilerArgs += ['--enable-preview']
+}
 test {
     useJUnitPlatform()
 }
